# anti-scrapling

./: .gitignore  .golangci.yml  AGENTS.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/run-continuation/: ses_197bf4307ffeI8IGPW8lfPOhFv.json
cmd/antiscrapling/: main.go  wire.go  wire_test.go
cmd/antiscrapling-cli/: main.go
deploy/docker/: .dockerignore  Dockerfile  README.md  docker-compose.example.yaml
deploy/examples/: README.md
deploy/helm/: README.md
docs/: 01-threat-model.md  02-architecture.md  03-build-plan.md  04-getting-started.md  05-policy-reference.md  06-sdk-integration.md  07-operations.md  08-faq.md
internal/api/: decide.go  decide_test.go
internal/cache/: cache.go  cache_test.go  factory.go  memory.go  redis.go
internal/challenge/: beacon_store.go  embed.go  issuer.go  service.go  service_test.go
internal/decision/: combine.go  combine_test.go
internal/observability/: audit.go  audit_test.go  health.go  health_test.go  logger.go  logger_test.go  metrics.go  metrics_test.go
internal/pipeline/: bench_test.go  pipeline.go  pipeline_test.go
internal/policy/: compiler.go  conformance_test.go  evaluator.go  evaluator_test.go  loader.go  loader_test.go
internal/proxy/: headers.go  proxy.go  (+1 more)
policies/: README.md  default.yaml  strict.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/anti_scrapling/: __init__.py  asgi.py  client.py  types.py  wsgi.py
sdk/python/tests/: test_client.py  test_fastapi.py  test_flask.py
testdata/: README.md
(+215 files in other folders)
