[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anti-scrapling"
version = "0.1.0"
description = "Python SDK for anti-scrapling firewall - FastAPI/Starlette/Flask adapters"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.30"]
starlette = ["starlette>=0.30"]
flask = ["flask>=3.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "fastapi>=0.100",
    "starlette>=0.30",
    "flask>=3.0",
    "httpx>=0.27",
    "anyio[asyncio]>=4.0",
]

[tool.setuptools.packages.find]
include = ["anti_scrapling*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
